# envmgr

./: .taplo.toml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: publish.yaml  rust-ci.yaml
.github/workflows/scripts/: compare_versions.py
envmgr/: Cargo.toml
envmgr/src/: cli.rs  commands.rs  config.rs  dotfiles.rs  environment.rs  error.rs  lib.rs  main.rs  plugins.rs  shell.rs  state.rs
envmgr/src/commands/: add.rs
envmgr/src/config/: environment.rs  global.rs  mod.rs
envmgr/src/environment/: manager.rs  mod.rs
envmgr/src/integrations/: gh_cli.rs  mod.rs  one_password_ssh_agent.rs  tailscale.rs
envmgr/tests/: claude_md_validation_test.rs  integration_tests.rs
envmgr_plugin/: Cargo.toml
envmgr_plugin/src/: lib.rs
examples/: README.md  setup.sh
examples/simple_config/: README.md  global.yaml
examples/simple_config/base/: README.md  config.yaml
examples/simple_config/base/files/.config/myapp/: config.toml
examples/simple_config/environments/personal/: README.md  config.yaml
examples/simple_config/environments/work/: README.md  config.yaml
scripts/: envmgr.fish  envmgr.sh
