[workspace]
members  = ["envmgr"]
resolver = "3"

[workspace.dependencies]

# Logging
env_logger = "0.11.8"
log        = "0.4.28"

# Config management

clap = { version = "4.5.48", features = ["derive"] }
config = { version = "0.15.17", default-features = false, features = [
  "yaml",
  "convert_case",
] }
dirs = "6.0.0"
schemars = "1.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.9.7"

# Errors
thiserror = "2.0.16"

# Utility
indoc       = "2.0.6"
lazy_static = "1.4.0"
