[workspace]
members  = ["envmgr"]
resolver = "2"

[workspace.package]
authors      = ["flyinpancake <flyinpancake@pm.me>"]
description  = "Dotfiles and CLI environment manager "
edition      = "2024"
keywords     = ["dotfiles", "environment", "manager", "cli", "configuration"]
license      = "Apache-2.0"
license-file = "LICENSE"
repository   = "https://github.com/flyinpancake/envmgr"
version      = "0.1.0"


[workspace.dependencies]

# Logging
env_logger = "0.11.8"
log        = "0.4.28"

# Config management

clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"
config = { version = "0.15.17", default-features = false, features = [
  "yaml",
  "convert_case",
] }
dirs = "6.0.0"
saphyr = "0.0.6"
schemars = "1.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.133"
serde_norway = "0.9.42"
toml = "0.9.7"

# Errors
thiserror = "2.0.16"

# Utility
indoc       = "2.0.6"
lazy_static = "1.4.0"
