[package]
name = "envmgr"

authors.workspace      = true
description.workspace  = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
license-file.workspace = true
readme.workspace       = true
repository.workspace   = true
version.workspace      = true

[lib]
name = "envmgr"
path = "src/lib.rs"

[[bin]]
name = "envmgr"
path = "src/main.rs"

[dependencies]
clap.workspace          = true
clap_complete.workspace = true
config.workspace        = true
dirs.workspace          = true
saphyr.workspace        = true
schemars.workspace      = true
serde.workspace         = true
serde_json.workspace    = true
thiserror.workspace     = true
toml.workspace          = true

indoc.workspace = true

env_logger.workspace = true
log.workspace        = true
